# roampal-core

./: .dockerignore  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.glama-test  LICENSE  README.md  conftest.py  glama.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
dev/benchmarks/: README.md  __init__.py  conftest.py  mock_utilities.py  pytest.ini  test_catastrophic_forgetting.py  test_comprehensive.py  test_comprehensive_benchmark.py  test_context_poisoning.py  test_contradictions.py  test_data_fixtures.py  test_dynamic_weight_shift.py  test_edge_cases.py  test_latency_benchmark.py  test_learning_curve.py  test_learning_sabotage.py  test_learning_speed.py  test_outcome_learning_ab.py  test_recovery_resilience.py  test_roampal_vs_vector_db.py  test_search_quality.py  test_semantic_confusion.py  test_stale_data.py  test_token_efficiency.py  test_torture_suite.py
dev/benchmarks/results/: SUMMARY.txt  catastrophic_forgetting.txt  comprehensive_partial.txt  context_poisoning.txt  contradictions.txt  dynamic_weight_shift.txt  edge_cases.txt  latency.txt  learning_curve.txt  learning_sabotage.txt  learning_speed.txt  outcome_learning_ab.txt  recovery_resilience.txt  roampal_vs_vector_db.txt  search_quality.txt  semantic_confusion.txt  stale_data.txt  token_efficiency.txt  torture_suite.txt
dev/docs/: CHANNELS.md  RELEASE_CHECKLIST.md  ROAMPAL_CHANNELS_VISION.md  ROAMPAL_CODE_DESIGN.md
dev/docs/releases/v0.1.10/: RELEASE_NOTES.md
dev/docs/releases/v0.1.5/: RELEASE_NOTES.md
dev/docs/releases/v0.1.6/: RELEASE_NOTES.md
dev/docs/releases/v0.1.7/: RELEASE_NOTES.md
dev/docs/releases/v0.1.8/: RELEASE_NOTES.md
dev/docs/releases/v0.1.9/: RELEASE_NOTES.md
dev/docs/releases/v0.2.1/: RELEASE_NOTES.md
dev/docs/releases/v0.2.2/: RELEASE_NOTES.md
dev/docs/releases/v0.2.3/: RELEASE_NOTES.md
dev/docs/releases/v0.2.4/: RELEASE_NOTES.md
dev/docs/releases/v0.2.5/: RELEASE_NOTES.md
dev/docs/releases/v0.2.6/: RELEASE_NOTES.md
dev/docs/releases/v0.2.7/: RELEASE_NOTES.md
dev/docs/releases/v0.2.8/: HOTFIX_0.2.8.1.md  RELEASE_NOTES.md
dev/docs/releases/v0.2.9/: HOTFIX_0.2.9.1.md  HOTFIX_0.2.9.2.md  RELEASE_NOTES.md
dev/docs/releases/v0.3.0/: RELEASE_NOTES.md
dev/docs/releases/v0.3.1/: RELEASE_NOTES.md
dev/docs/releases/v0.3.2/: RELEASE_NOTES.md
dev/docs/releases/v0.3.3/: RELEASE_NOTES.md
dev/docs/releases/v0.3.3.1/: RELEASE_NOTES.md
dev/docs/releases/v0.3.3.2/: RELEASE_NOTES.md
dev/docs/releases/v0.3.4/: HOTFIX_0.3.4.1.md  RELEASE_NOTES.md
dev/docs/releases/v0.3.5/: HOTFIX_0.3.5.1.md  HOTFIX_0.3.5.2.md  RELEASE_NOTES.md
dev/docs/releases/v0.3.6/: RELEASE_NOTES.md
dev/docs/releases/v0.3.7/: RELEASE_NOTES.md
dev/docs/releases/v0.3.7.1/: RELEASE_NOTES.md
dev/docs/releases/v0.3.8/: RELEASE_NOTES.md
dev/docs/releases/v0.3.9/: RELEASE_NOTES.md
dev/docs/releases/v0.4.0/: RELEASE_NOTES.md
dev/docs/releases/v0.4.1/: RELEASE_NOTES.md
dev/docs/releases/v0.4.1.1/: RELEASE_NOTES.md
dev/docs/releases/v0.4.1.2/: RELEASE_NOTES.md
dev/docs/releases/v0.4.2/: RELEASE_NOTES.md
dev/docs/releases/v0.4.2.1/: RELEASE_NOTES.md
dev/docs/releases/v0.4.2.2/: RELEASE_NOTES.md
dev/docs/releases/v0.4.3/: RELEASE_NOTES.md
dev/docs/releases/v0.4.4/: RELEASE_NOTES.md
dev/docs/releases/v0.4.5/: RELEASE_NOTES.md
dev/docs/releases/v0.4.5.1/: RELEASE_NOTES.md
dev/docs/releases/v0.4.6/: RELEASE_NOTES.md
dev/docs/releases/v0.4.6.1/: RELEASE_NOTES.md
dev/docs/releases/v0.4.7/: RELEASE_NOTES.md
dev/docs/releases/v0.4.8/: RELEASE_NOTES.md
dev/docs/releases/v0.4.9/: RELEASE_NOTES.md
dev/docs/releases/v0.4.9.1/: RELEASE_NOTES.md
dev/docs/releases/v0.4.9.2/: RELEASE_NOTES.md
dev/docs/releases/v0.4.9.3/: RELEASE_NOTES.md
dev/docs/releases/v0.4.9.4/: RELEASE_NOTES.md
dev/docs/releases/v0.5.0/: RELEASE_NOTES.md
dev/docs/releases/v0.5.1/: RELEASE_NOTES.md
dev/docs/releases/v0.5.2/: RELEASE_NOTES.md
dev/docs/releases/v0.5.3/: RELEASE_NOTES.md
dev/docs/releases/v0.5.3.1/: RELEASE_NOTES.md
dev/docs/releases/v0.5.4/: RELEASE_NOTES.md
dev/docs/releases/v0.5.5/: RELEASE_NOTES.md
dev/docs/releases/v0.5.5.1/: RELEASE_NOTES.md
dev/docs/releases/v0.5.5.2/: RELEASE_NOTES.md
dev/docs/releases/v0.5.6/: RELEASE_NOTES.md
dev/docs/releases/v0.5.7/: RELEASE_NOTES.md
dev/docs/releases/v1.0.0/: unit_tests.txt
docs/: RELEASE_0.2.0.md
docs/releases/v0.1.5/: RELEASE_NOTES.md
roampal/: __init__.py  __main__.py  cli.py  profile_manager.py  sidecar_service.py  test_profile_manager.py
roampal/backend/: __init__.py
roampal/backend/modules/: __init__.py
roampal/backend/modules/memory/: __init__.py  chromadb_adapter.py  config.py  content_graph.py  context_service.py  embedding_service.py  knowledge_graph_service.py  memory_bank_service.py  memory_types.py  outcome_service.py  promotion_service.py  routing_service.py  scoring_service.py  search_service.py  tag_migration.py  tag_service.py  (+1 more)
roampal/hooks/: __init__.py  session_manager.py  stop_hook.py  user_prompt_submit_hook.py
roampal/mcp/: __init__.py  inspect_server.py  server.py
roampal/plugins/opencode/: roampal.ts
roampal/server/: __init__.py  main.py
roampal/utils/: atomic_json.py  sidecar_tag_wrapper.py
(+39 files in other folders)
