[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roampal"
version = "0.1.2"
description = "Persistent memory for AI coding tools (Claude Code, Cursor, etc.)"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Roampal", email = "hello@roampal.ai"}
]
keywords = ["ai", "memory", "claude", "cursor", "mcp", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "mcp>=1.0.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "rank-bm25>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
roampal = "roampal.cli:main"

[project.urls]
Homepage = "https://roampal.ai"
Repository = "https://github.com/roampal/roampal-core"
Documentation = "https://docs.roampal.ai"

[tool.setuptools.packages.find]
where = ["."]
include = ["roampal*"]
