[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roampal"
version = "0.3.5.1"
description = "Persistent memory for AI coding tools (Claude Code, OpenCode)"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Roampal", email = "roampal@protonmail.com"}
]
keywords = ["ai", "memory", "claude", "opencode", "mcp", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.0.0,<2.0.0",  # v0.2.2: Pin to 1.x (schema migration handles 0.4.x upgrades)
    "sentence-transformers>=2.2.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "mcp>=1.0.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "rank-bm25>=0.2.0",
    "nltk>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
roampal = "roampal.cli:main"

[project.urls]
Homepage = "https://roampal.ai"
Repository = "https://github.com/roampal-ai/roampal-core"
Documentation = "https://github.com/roampal-ai/roampal-core#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["roampal*"]

[tool.setuptools.package-data]
"roampal.plugins.opencode" = ["*.ts"]
